Bug 137563 - Some toolbar icons not displayed at start on Linux with Skia
Summary: Some toolbar icons not displayed at start on Linux with Skia
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Linux (All)
: low minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-10-17 18:26 UTC by Aron Budea
Modified: 2020-11-13 15:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (58.13 KB, image/png)
2020-10-17 18:28 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2020-10-17 18:26:40 UTC
Open eg. Writer in Linux with Skia rendering using the preferred way:
SAL_USE_VCLPLUGIN=gen SAL_ENABLESKIA=1 ./soffice --writer

=> The <New> icon on the toolbar isn't shown (see screenshot). Or rather, shows up, then disappears, and shows up again when hovered over, or the window is resized.

Version: 7.1.0.0.alpha0+
Build ID: f21f3d094cfb495c89dfb0a23ecb061ef1a2178e
CPU threads: 16; OS: Linux 5.4; UI render: Skia/Raster; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

It's a regression from the following commit, bibisected using repo bibisect-linux-64-7.1.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=eb2753560d9238f60131ff9f64aaf1eb4ae2d764
author		Luboš Luňák <l.lunak@collabora.com>	2020-09-23 23:21:42 +0200
committer	Tomaž Vajngerl <quikee@gmail.com>	2020-09-25 12:05:59 +0200

draw linear and radial gradients directly with Skia
Comment 1 Aron Budea 2020-10-17 18:28:27 UTC
Created attachment 166468 [details]
Screenshot
Comment 2 Julien Nabet 2020-10-17 18:47:35 UTC
On pc Debian x86-64 with master sources updated today + SAL_USE_VCLPLUGIN=gen SAL_ENABLESKIA=1, I could reproduce this.
Comment 3 Commit Notification 2020-11-13 15:06:11 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c98467b7069ff06a8ff42832c3f2bdf193c487bd

properly clip native VCL gradients (tdf#137563)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.