properly clip native VCL gradients (tdf#137563)

If I'm getting it right, OutputDevice::InitClipRegion() sets
mbOutputClipped = true if the entire output would be clipped,
and it doesn't call SalGraphics::SetClipRegion() at all, instead
OutputDevice draw calls are supposed to avoid the drawing entirely.
But while the polygon fallback in OutputDevice::DrawGradient()
does so, the call to SalGraphics::DrawGradient() didn't.

Change-Id: Ib93bcad98534a3a3d9be26cdea11def51c796f00