vcl/source/outdev/gradient.cxx
@@ -106,7 +106,8 @@ void OutputDevice::DrawGradient( const tools::PolyPolygon& rPolyPoly,
                     InitClipRegion();
 
                 // try to draw gradient natively
-                bDrawn = mpGraphics->DrawGradient( aClixPolyPoly, aGradient );
+                if (!mbOutputClipped)
+                    bDrawn = mpGraphics->DrawGradient( aClixPolyPoly, aGradient );
 
                 if (!bDrawn && !mbOutputClipped)
                 {
